// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountIdentities renders empty 1`] = `
<SideEffect(DocumentTitle)
  title="Identities - Sentry"
>
  <div>
    <SettingsPageHeading
      noTitleStyles={false}
      title="Identities"
    />
    <Panel>
      <PanelHeader
        disablePadding={true}
      >
        <ForwardRef
          px={2}
        >
          Identities
        </ForwardRef>
      </PanelHeader>
      <PanelBody
        direction="column"
        disablePadding={true}
        flex={false}
      >
        <EmptyMessage>
          There are no identities associated with this account
        </EmptyMessage>
      </PanelBody>
    </Panel>
  </div>
</SideEffect(DocumentTitle)>
`;

exports[`AccountIdentities renders list 1`] = `
<SideEffect(DocumentTitle)
  title="Identities - Sentry"
>
  <div>
    <SettingsPageHeading
      noTitleStyles={false}
      title="Identities"
    />
    <Panel>
      <PanelHeader
        disablePadding={true}
      >
        <ForwardRef
          px={2}
        >
          Identities
        </ForwardRef>
      </PanelHeader>
      <PanelBody
        direction="column"
        disablePadding={true}
        flex={false}
      >
        <PanelItem
          alignItems="center"
          key="1"
          p={0}
        >
          <ForwardRef
            flex="1"
            p={2}
          >
            GitHub
          </ForwardRef>
          <ForwardRef
            p={2}
          >
            <Button
              disabled={false}
              onClick={[Function]}
              size="small"
            >
              Disconnect
            </Button>
          </ForwardRef>
        </PanelItem>
      </PanelBody>
    </Panel>
  </div>
</SideEffect(DocumentTitle)>
`;
